tools/k8s/observability/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "jaeger"
  labels:
    app.kubernetes.io/name: "jaeger"
    app.kubernetes.io/component: "observability"
spec:
  rules:
    - host: "jaeger.local"
      http:
        paths:
          - backend:
              service:
                name: "jaeger"
                port:
                  number: 16686
            path: "/"
            pathType: "Prefix"
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "prometheus"
  labels:
    app.kubernetes.io/name: "prometheus"
    app.kubernetes.io/component: "observability"
spec:
  rules:
    - host: "prometheus.local"
      http:
        paths:
          - backend:
              service:
                name: "prometheus"
                port:
                  number: 9090
            path: "/"
            pathType: "Prefix"
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "grafana"
  labels:
    app.kubernetes.io/name: "grafana"
    app.kubernetes.io/component: "observability"
spec:
  rules:
    - host: "grafana.local"
      http:
        paths:
          - backend:
              service:
                name: "grafana"
                port:
                  number: 3000
            path: "/"
            pathType: "Prefix"
